--- a/6장 정리.md
+++ b/6장 정리.md
@@ -107,9 +107,9 @@
 - 성능 유지를 위해 heap file을 주기적으로 재조직 필요
 
 > #### 성능
-- 질의에서 모든 레코드를 참조하고, 레코드 접근 순서가 중요하지 않을 때 사용.
-- 특정 레코드 검색 시, 비효율적.
-- 몇 개의 레코드들을 검색하는 경우, 특정 범위 내의 레코드를 검색하는 경우 또한 비효율적
+> - 질의에서 모든 레코드를 참조하고, 레코드 접근 순서가 중요하지 않을 때 사용.
+> - 특정 레코드 검색 시, 비효율적.
+> - 몇 개의 레코드들을 검색하는 경우, 특정 범위 내의 레코드를 검색하는 경우 또한 비효율적
 
 ![](./image/6-7.png)
 
