--- a/6장 정리.md
+++ b/6장 정리.md
@@ -215,7 +215,7 @@
 - **마스터 인덱스(master index)**: 다단계 인덱스에서 가장 상위 단계 인덱스
 - 마스터 인덱스는 한 블록이기 때문에 주 기억 장치에 상주할 수 있다.
 - 모든 인덱스는 마스터 인덱스를 거치기 때문에 메인 메모리에 캐시해 둠으로써 속도를 빠르게 한다.
-- 대부분의 다단계 인덱스는 _B$^+$-트리_ 를 사용한다.
+- 대부분의 다단계 인덱스는 _B+ 트리_ 를 사용한다.
 
 ![](./image/6-15.png)
 
