--- a/6장 정리.md
+++ b/6장 정리.md
@@ -287,7 +287,7 @@ SELECT * FROM EMPLOYEES WHERE SALARY>=3000000 AND SALARY<=4000000;
 ```SQL
 SELECT * FROM EMPLOYEES WHERE SALARY*12 > 40000000;
 ```
-- 널값에 대해서는 일반적으로 인덱스가 사용될 때(널값을 조건으로 갖는 애트리뷰트)
+- 널값에 대해서는 일반적으로 인덱스가 사용 않는다(널값을 조건으로 갖는 애트리뷰트)
 ```SQL
 SELECT * FROM EMPLOYEES WHERE MANAGER IS NULL;
 ```
