--- a/7장 정리.md
+++ b/7장 정리.md
@@ -46,12 +46,12 @@
 ### 관계 데이터베이스 설계의 비공식적인 지침
 
 - 이해하기 쉽고 명확한 스키마를 만들라.
-    - 여러 엔티티 타입이나 관계 차입에 속한 애트리뷰트들을 하나의 릴레이션에 포합시키지 않음.
+    - 여러 엔티티 타입이나 관계 입에 속한 애트리뷰트들을 하나의 릴레이션에 포합시키지 않음.
 - 널값을 피하라.
 - 가짜 투플이 생기지 않도록 하라.
 - 스키마를 정제하라.
 
-## 함수적 종속성
+## 7.2 함수적 종속성
 
 ### 함수적 종속성(Functional Dependency)의 개요
 
