--- a/9장 정리.md
+++ b/9장 정리.md
@@ -205,3 +205,12 @@
 - COMMIT, ROLLBACK, SAVEPOINT를 이용하여 트랜잭션의 논리를 명시적으로 제어할 수 있다.
 
 ![](./image/9-11.png)
+
+### 고립 수준
+
+- 고립 수준은 한 트랜잭션이 다른 트랜잭션과 고립되어야 하는 정도를 나타낸다.
+- 고립 수준이 낮으면 동시성은 높아지지만 데이터의 정확성은 떨어진다.
+- 고립 수준이 높으면 데이터가 정확해지지만 동시성이 저하된다.
+
+#### 고립 수준에 따른 동시성 문제
+![](./image/9-12.png)
